--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,9 @@
 name: release
 
 on:
-  push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+.[0-9]+
+  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   build:
