调整版本号

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Zi /Zc:threadSafeInit-
 set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
 
 # set up options for debugging under the release
-IF(NOT DEFINED ENV{CI_PIPELINE_IID})
+IF(NOT DEFINED ENV{GITHUB_RUN_NUMBER})
 	ADD_DEFINITIONS( /Zi )
 	ADD_DEFINITIONS( /Od )
 
@@ -32,8 +32,8 @@ add_definitions(-DUILIB_EXPORTS)
 add_definitions(-DBUILDING_LIBCURL)
 add_definitions(-DHTTP_ONLY)
 
-IF(DEFINED ENV{CI_PIPELINE_IID})
-	SET(BUILD_VERSION $ENV{CI_PIPELINE_IID})
+IF(DEFINED ENV{GITHUB_RUN_NUMBER})
+	SET(BUILD_VERSION $ENV{GITHUB_RUN_NUMBER})
 ELSE()
 	SET(BUILD_VERSION 0)
 ENDIF()
