--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,18 +12,18 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v3
-      
-    - name: build
-      run: python make_setup.py
+      - uses: actions/checkout@v3
+        
+      - name: build
+        run: python make_setup.py
 
-  release:
-    runs-on: self-hosted
-    needs: build
-    steps:
-    - uses: actions/checkout@v3
-    - name: release
-      run: |
-        gh release create $github.ref -target $GITHUB_SHA bin/Release/softManager.exe
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: bin/Release/softManager.exe
+          asset_name: softManager.exe
+          asset_content_type: application/octet-stream
