--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,6 @@ jobs:
         
       - name: build
         run: |
-          echo "github ref: ${{ github.ref }}"
           python make_setup.py
 
   release:
@@ -33,8 +32,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: v1.0.1.0
+          release_name: Release v1.0.1.0
           draft: false
           prerelease: false
 
