--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Upload Windows Asset
         uses: actions/upload-release-asset@v1
+        env:
+          super_secret: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: bin/Release/softManager.exe
