--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,20 +32,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v1.0.1.0
-          release_name: Release v1.0.1.0
+          tag_name: v1.0.1.1
+          release_name: Release v1.0.1.1
           draft: false
           prerelease: false
 
-      - name: Download Artifact
-        uses: actions/download-artifact@v2
-
       - name: Upload Windows Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          super_secret: ${{ secrets.GITHUB_TOKEN }}
+        uses: AButler/upload-release-asets@3.0
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bin/Release/softManager.exe
-          asset_name: softManager.exe
-          asset_content_type: application/octet-stream
+          files: vsbuild/Release/softManager.exe
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
