--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,13 +32,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v1.0.1.1
-          release_name: Release v1.0.1.1
+          tag_name: v1.0.1.2
+          release_name: Release v1.0.1.2
           draft: false
           prerelease: false
 
       - name: Upload Windows Asset
-        uses: AButler/upload-release-asets@3.0
+        uses: AButler/upload-release-assets@v3.0
         with:
           files: vsbuild/Release/softManager.exe
           repo_token: ${{ secrets.GITHUB_TOKEN }}
+          release-tag: ${{ steps.create_release.outputs.tag_name }}
