--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,5 +41,5 @@ jobs:
         uses: AButler/upload-release-assets@v3.0
         with:
           files: vsbuild/Release/softManager.exe
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           release-tag: ${{ steps.create_release.outputs.tag_name }}
