--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v1.0.1.2
-          release_name: Release v1.0.1.2
+          tag_name: v1.0.1.3
+          release_name: Release v1.0.1.3
           draft: false
           prerelease: false
 
@@ -42,3 +42,4 @@ jobs:
         with:
           files: vsbuild/Release/softManager.exe
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          release-tag: v1.0.1.3
