--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,14 +32,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v1.0.1.3
-          release_name: Release v1.0.1.3
+          tag_name: v1.0.1.4
+          release_name: Release v1.0.1.4
           draft: false
           prerelease: false
 
       - name: Upload Windows Asset
         uses: AButler/upload-release-assets@v3.0
         with:
-          files: vsbuild/Release/softManager.exe
+          files: bin/Release/softManager.exe
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          release-tag: v1.0.1.3
+          release-tag: v1.0.1.4
